# drcom-jlu-qt

./: .gitignore  CMakeLists.txt  DogcomSocket.cpp  DogcomSocket.h  DrcomJluQt.qrc  README.md  constants.h  dogcom.cpp  dogcom.h  dogcomcontroller.cpp  dogcomcontroller.h  interruptiblesleeper.cpp  interruptiblesleeper.h  loginresult.cpp  loginresult.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  utils.cpp  utils.h
resources/: icon.icns
ts/: DrcomJluQt_zh_CN.ts
